# MyArray

./: CMakeLists.txt  CMakelists.txt  MyArray.cpp  readme.md
headers/: MyArray.hpp
sources/: main.cpp
